<resources>
    <string name="app_name">Popcorn</string>
    <string name="signUp">Sign up</string>
    <string name="password_forgotten">Password forgotten?</string>
    <string name="singIn">Sign In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="recommendations">Recommandations</string>
    <string name="popular">Populaire</string>
    <string name="release_date">Date de sortie :</string>
    <string name="director">Réalisateur :</string>
    <string name="actors">Acteurs :</string>
    <string name="categories">Genres :</string>
    <string name="nationality">Nationalité :</string>
    <string name="general_recommendations">Films similaires</string>
    <string name="actors_recommendations">Recommandations par acteurs</string>
    <string name="directors_recommendations">Recommandations par réalisateurs</string>
    <string name="genres_recommendations">Recommandations par genres</string>
    <string name="seeMore">Voir plus</string>
    <string name="email">Login</string>
</resources>
