<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/activity_button_margin"
        android:layout_marginLeft="@dimen/activity_button_margin"
        android:layout_marginRight="@dimen/activity_button_margin"
        android:layout_marginStart="@dimen/activity_button_margin"
        android:text="@string/signUp" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordEditText"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"
        android:ems="10"
        android:hint="@string/login" />

    <TextView
        android:id="@+id/forgottenPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpSeparator"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/password_forgotten" />

    <View
        android:id="@+id/signUpSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/signUpButton"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/forgottenPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/activity_button_margin"
        android:layout_marginLeft="@dimen/activity_button_margin"
        android:layout_marginRight="@dimen/activity_button_margin"
        android:layout_marginStart="@dimen/activity_button_margin"
        android:background="@color/colorPrimary"
        android:text="@string/singIn"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_button_margin"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_above="@id/loginEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@color/colorAccent" />

</RelativeLayout>