<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:background="@color/darkBlue">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:id="@+id/cardViewMoviePicture">

            <ImageView
                android:id="@+id/moviePicture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/la_la_land" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="La La Land"
            style="@style/MovieDetailWhiteText"
            android:textSize="30sp"
            android:layout_alignTop="@+id/cardViewMoviePicture"
            android:layout_toRightOf="@+id/cardViewMoviePicture"
            android:layout_toEndOf="@+id/cardViewMoviePicture"
            android:maxLines="2"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rateStarsLayout"
            android:layout_alignLeft="@id/movieTitle"
            android:layout_alignStart="@id/movieTitle"
            android:layout_below="@id/movieTitle"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rateStar1"
                android:src="@drawable/ic_star_border_white_24dp"
                android:tint="@color/colorAccent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rateStar2"
                android:src="@drawable/ic_star_border_white_24dp"
                android:tint="@color/colorAccent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rateStar3"
                android:src="@drawable/ic_star_border_white_24dp"
                android:tint="@color/colorAccent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rateStar4"
                android:src="@drawable/ic_star_border_white_24dp"
                android:tint="@color/colorAccent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rateStar5"
                android:src="@drawable/ic_star_border_white_24dp"
                android:tint="@color/colorAccent"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="0.0"
            android:textSize="35sp"
            style="@style/MovieDetailYellowText"
            android:layout_alignTop="@+id/rateStarsLayout"
            android:layout_toRightOf="@+id/rateStarsLayout"
            android:layout_toEndOf="@+id/rateStarsLayout" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:padding="10dp"
        android:background="@color/lightBlue"
        style="@style/MovieDetailWhiteText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/releaseDate"
            android:text="@string/release_date"
            style="@style/MovieDetailWhiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/releaseDateValue"
            android:text="données ici"
            android:layout_toRightOf="@id/releaseDate"
            android:layout_toEndOf="@id/releaseDate"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            style="@style/MovieDetailWhiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/director"
            android:text="@string/director"
            android:layout_below="@id/releaseDate"
            style="@style/MovieDetailWhiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/directorValue"
            android:text="données ici"
            android:layout_toRightOf="@id/director"
            android:layout_toEndOf="@id/director"
            android:layout_below="@id/releaseDate"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            style="@style/MovieDetailWhiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actors"
            android:text="@string/actors"
            android:layout_below="@id/director"
            style="@style/MovieDetailWhiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actorsValue"
            android:text="données ici"
            android:layout_toRightOf="@id/actors"
            android:layout_toEndOf="@id/actors"
            android:layout_below="@id/director"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            style="@style/MovieDetailWhiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categories"
            android:text="@string/categories"
            android:layout_below="@id/actors"
            style="@style/MovieDetailWhiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categoriesValue"
            android:text="données ici"
            android:layout_toRightOf="@id/categories"
            android:layout_toEndOf="@id/categories"
            android:layout_below="@id/actors"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            style="@style/MovieDetailWhiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nationality"
            android:text="@string/nationality"
            android:layout_below="@id/categories"
            style="@style/MovieDetailWhiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nationalityValue"
            android:text="données ici"
            android:layout_toRightOf="@id/nationality"
            android:layout_toEndOf="@id/nationality"
            android:layout_below="@id/categories"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            style="@style/MovieDetailWhiteText"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:background="@color/colorBackgroundDark">


    </RelativeLayout>

</LinearLayout>